--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,47 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  background-color: #313338;
-  color: #fbfbff;
+@layer base {
+  :root {
+    --background: 225 6% 13%;
+    --foreground: 260 100% 99%;
+
+    --muted: 225 7% 24%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 47.4% 11.2%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 47.4% 11.2%;
+
+    --border: 231 6% 22%;
+    --input: 214.3 31.8% 91.4%;
+
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+
+    --secondary: 225 7% 24%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+
+    --accent: 225 7% 24%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+
+    --destructive: 0 100% 50%;
+    --destructive-foreground: 210 40% 98%;
+
+    --ring: 215 20.2% 65.1%;
+
+    --radius: 0.5rem;
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+    font-feature-settings: "rlig" 1, "calt" 1;
+  }
 }
